--- a/RandomForestModellingForKanoAI.ipynb
+++ b/RandomForestModellingForKanoAI.ipynb
@@ -1,6 +1,30 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Random Forest Model - Classification and Regression (Smart Farming Kano)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Dataset: https://github.com/OmdenaAI/KanoNigeriaChapter_SmartFarming/blob/main/Dataset_Merged/KanoState.csv\n",
+        "\n",
+        "This implements two Random Forest models for the Merged_datatset in smart farming:\n",
+        "1. Soil Moisture Prediction (Regression): Predicts Profile_Soil_Moisture to guide planting decisions (0.3-0.4 threshold).\n",
+        "2. Rainy Season Onset Prediction (Classification): Predicts rainy season onset by week as a binary \"plant/don’t plant\" decision.\n",
+        "\n",
+        "Features include temperature trends, humidity patterns, wind direction, soil moisture, and simulated historical onset dates.\n",
+        "Two versions of each model (original and tweaked) are provided for performance vs. runtime trade-offs:\n",
+        "- Original: Exhaustive tuning (19 minutes runtime, high accuracy).\n",
+        "- Tweaked: Optimized for speed (5-7 minutes, near-identical performance).\n",
+        "Visualizations (Scatter plots, Confusion matrices, Feature importance) provide further insights."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -586,30 +610,6 @@
         "print(f\"Original Onset Model - Rainy Season Onset Decision: {onset_decision_original}\")\n",
         "print(f\"Tweaked Onset Model - Rainy Season Onset Decision: {onset_decision_tweaked}\")\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "EiGZoKhem3ep"
-      },
-      "source": [
-        "Documentation"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "This project implements two Random Forest models for the Merged_datatset in smart farming:\n",
-        "1. Soil Moisture Prediction (Regression): Predicts Profile_Soil_Moisture to guide planting decisions (0.3-0.4 threshold).\n",
-        "2. Rainy Season Onset Prediction (Classification): Predicts rainy season onset by week as a binary \"plant/don’t plant\" decision.\n",
-        "\n",
-        "Features include temperature trends, humidity patterns, wind direction, soil moisture, and simulated historical onset dates.\n",
-        "Two versions of each model (original and tweaked) are provided for performance vs. runtime trade-offs:\n",
-        "- Original: Exhaustive tuning (19 minutes runtime, high accuracy).\n",
-        "- Tweaked: Optimized for speed (5-7 minutes, near-identical performance).\n",
-        "Visualizations (Scatter plots, Confusion matrices, Feature importance) provide further insights.\n"
       ]
     },
     {
